# pg_aws_compute2

./: README.md  apply_pattern3.py  convert_redshift_sql_to_tubibricks.py  create_asg.py  create_iam.py  create_key_pair.py  create_kms.py  create_launch_template.py  create_security_group.py  database_keep_alive.py  databricks_upload_workspace_file.py  main.py  main2.py  o_dispatcher.py  o_display.py  o_task.py  o_worker.py  pyproject.toml  requirements.txt  requirements2.txt  test_create_key_pair.py  try.py  username.json
_api/: _airflow.py  _github.py
_aws/: _awsredshift.py  _awsredshift_data.py  awsasg.py  awsclient_config.py  awscloudformation.py  awscloudwatch.py  awscloudwatchlog.py  awscommon.py  awsdynamodb.py  awsec2.py  awsiam.py  awskms.py  awslambda.py  awsrds.py  awsroute53.py  awss3.py  awssecretmanager.py  awsstepfunction.py  awstextract.py
_common/: _common.py
_config/: cli.py  config.py
_connect/: _connect.py
_directive/: databricks_sdk.py  redshift.py  sqlparse.py
_engine/: _command_protocol.py  _process_flow.py  _simple_task.py  _subprocess.py  test_simple_task.py
_error_handling/: _error_handling.py  _validation.py  _validation_field_exist.py
_event/: _event.py  create_asg.instruction  create_compute.py  create_iam.instruction  create_key_pair.instruction  create_kms.instruction  create_launch_template.instruction  create_security_group.instruction  username.json
_example/: deploy_lambda.sh  destroy_lambda.sh  generate_cli.py  run_asg_creation.py  run_iam_creation.py  run_key_pair_creation.py  run_kms_creation.py  (+2 more)
_meta/: _meta.py
(+38 files in other folders)
